# backend/app/Dto/Category/CategoryCreateDto.php
@@ -6,9 +6,13 @@ readonly final class CategoryCreateDto
 {
     /**
      * @param string $category
+     * @param string $description
+     * @param string $thumbnail
      */
     public function __construct(
-        public string $category
+        public string $category,
+        public string $description,
+        public string $thumbnail,
     )
     {}
 }
